--- a/templates/interest/pay_interest.html
+++ b/templates/interest/pay_interest.html
@@ -51,7 +51,7 @@
                         <td>每月 25日</td>
                         <td>张文</td>
                         <td>
-                          <a class="btn btn-primary" href="{% url 'loan:detail' 1 %}"> 详细内容 </a>
+                          <a class="btn btn-primary" href="loan_detail.html"> 详细内容 </a>
                           <a class="btn btn-primary" href="interest_pay.html"> 利息支付 </a>
                           <a class="btn btn-primary" href="loan_repay.html"> 偿还 </a>
                           <a class="btn btn-primary" href="loan_prolong.html"> 延长 </a>
@@ -107,7 +107,7 @@
                         <td>每月 25日</td>
                         <td>张文</td>
                         <td>
-                          <a class="btn btn-primary" href="{% url 'loan:detail' 1 %}"> 详细内容 </a>
+                          <a class="btn btn-primary" href="loan_detail.html"> 详细内容 </a>
                           <a class="btn btn-primary" href="interest_pay.html"> 利息支付 </a>
                           <a class="btn btn-primary" href="loan_repay.html"> 偿还 </a>
                           <a class="btn btn-primary" href="loan_prolong.html"> 延长 </a>
