--- a/templates/loan/create1.html
+++ b/templates/loan/create1.html
@@ -102,7 +102,7 @@
                       <div class="col-sm-offset-2 col-sm-10">
                         <button type="submit" class="btn btn-primary">Next 3</button>
                         <button type="reset" class="btn btn-default">Reset</button>
-                        <a class="btn btn-danger" href="loan2_process.html"> TEST NEXT 2 </a>
+                        <a class="btn btn-danger" href="{% url 'loan:create2' %}"> TEST NEXT 2 </a>
                       </div>
                   </div>
               </form>
