--- a/templates/loan/create3.html
+++ b/templates/loan/create3.html
@@ -203,7 +203,7 @@
                     <div class="col-sm-offset-2 col-sm-10">
                       <button type="submit" class="btn btn-primary">Next 3</button>
                       <button type="reset" class="btn btn-default">Reset</button>
-                      <a class="btn btn-danger" href="loan_list.html"> 融资 目录 </a>
+                      <a class="btn btn-danger" href="{% url 'loan:index' %}"> 融资 目录 </a>
                     </div>
                 </div>
             </form>
