--- a/event/templates/event/partial/calendar_controls.html
+++ b/event/templates/event/partial/calendar_controls.html
@@ -1,12 +1,12 @@
 {% load i18n %}
 
-<div class="row">
-    <div class="btn-group {{ css_classes }}">
+<div class="row cal-row-fluid">
+    <div class="btn-group pull-right">
         <button class="btn btn-primary" data-calendar-nav="prev"> {% trans 'Prev' %} </button>
-        <button class="btn" data-calendar-nav="today"> Today </button>
+        <button class="btn" data-calendar-nav="today"> <b>{{today|date:"Y/m/d"}}</b> </button>
         <button class="btn btn-primary" data-calendar-nav="next">{% trans 'Next' %}</button>
     </div>
-    <div class="btn-group {{ css_classes }}">
+    <div class="btn-group pull-right">
         <button class="btn btn-warning" data-calendar-view="year">{% trans 'Year' %}</button>
         <button class="btn btn-warning active" data-calendar-view="month">{% trans 'Month' %}</button>
     </div>
