attach some master function

--- a/templates/left_menu.html
+++ b/templates/left_menu.html
@@ -69,6 +69,18 @@
                 </ul>
                 <!-- /.nav-second-level -->
             </li>
+            <li>
+                <a href="#"><i class="fa fa-magnet fa-fw"></i> Master <span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                    <li>
+                        <a href="{% url 'master:bankindex' %}">银行管理</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'master:creditgradeindex' %}">信用等级</a>
+                    </li>
+                </ul>
+                <!-- /.nav-second-level -->
+            </li>
 
         </ul>
     </div>
