--- a/templates/loan/create1.html
+++ b/templates/loan/create1.html
@@ -46,6 +46,10 @@
                   <div class="col-sm-9"><input type="text" class="form-control" name="bond_amount" value="160000000"></div>
                 </div>
                 <div class="form-group">
+                  <label class="control-label col-sm-3" for="contract_date">合同签字编码 : </label> 
+                  <div class="col-sm-9"><input type="text" class="form-control" name="contract_date" value="CCBB-123456"></div>
+                </div>
+                <div class="form-group">
                   <label class="control-label col-sm-3" for="contract_date">合同签字日子 : </label> 
                   <div class="col-sm-9"><input type="date" class="form-control" name="contract_date" value="2016-09-10"></div>
                 </div>
