--- a/templates/loan/create3.html
+++ b/templates/loan/create3.html
@@ -32,7 +32,7 @@
                 <label class="control-label col-sm-3" for="repay">财务顾问费 : </label> 
                 <div class="col-sm-9">
                   <div class="col-sm-12">说明 ： <textarea type="text" class="form-control" rows="2" name="security_explain"></textarea></div>
-                  <div class="col-sm-12">年华费率 : <input type="text" name="repay_date" value="3.2000%"></div>       
+                  <div class="col-sm-12">年华费率 : <input type="text" name="repay_date" value="0.3075">%</div>       
                   <div class="col-sm-12">费用金额 : <input type="text" name="repay_date" value="30000"></div>
                   <div class="col-sm-2"><label class="control-label" for="repay">付款 : </label></div>
                   <div class="col-sm-10">
@@ -49,7 +49,7 @@
                 <label class="control-label col-sm-3" for="repay">股东担保费 : </label> 
                 <div class="col-sm-9">
                   <div class="col-sm-12">说明 ： <textarea type="text" class="form-control" rows="2" name="security_explain"></textarea></div>
-                  <div class="col-sm-12">年华费率 : <input type="text" name="repay_date" value="3.2000%"></div>       
+                  <div class="col-sm-12">年华费率 : <input type="text" name="repay_date" value="0.3075%"></div>       
                   <div class="col-sm-12">费用金额 : <input type="text" name="repay_date" value="30000"></div>
                   <div class="col-sm-2"><label class="control-label" for="repay">付款 : </label></div>
                   <div class="col-sm-10">
@@ -66,7 +66,7 @@
                 <label class="control-label col-sm-3" for="repay">前端费 : </label> 
                 <div class="col-sm-9">
                   <div class="col-sm-12">说明 ： <textarea type="text" class="form-control" rows="2" name="security_explain"></textarea></div>
-                  <div class="col-sm-12">年华费率 : <input type="text" name="repay_date" value="3.2000%"></div>       
+                  <div class="col-sm-12">年华费率 : <input type="text" name="repay_date" value="0.3075%"></div>       
                   <div class="col-sm-12">费用金额 : <input type="text" name="repay_date" value="30000"></div>
                   <div class="col-sm-2"><label class="control-label" for="repay">付款 : </label></div>
                   <div class="col-sm-10">
@@ -83,7 +83,7 @@
                 <label class="control-label col-sm-3" for="repay">律师费 : </label> 
                 <div class="col-sm-9">
                   <div class="col-sm-12">说明 ： <textarea type="text" class="form-control" rows="2" name="security_explain"></textarea></div>
-                  <div class="col-sm-12">年华费率 : <input type="text" name="repay_date" value="3.2000%"></div>       
+                  <div class="col-sm-12">年华费率 : <input type="text" name="repay_date" value="0.3075%"></div>       
                   <div class="col-sm-12">费用金额 : <input type="text" name="repay_date" value="30000"></div>
                   <div class="col-sm-2"><label class="control-label" for="repay">付款 : </label></div>
                   <div class="col-sm-10">
