--- a/templates/interest/create.html
+++ b/templates/interest/create.html
@@ -47,18 +47,31 @@
                 </div>
                 <div class="form-group">
                   <label class="control-label col-sm-3" for="loan_amount">인민은행기준율 : </label> 
-                  <div class="col-sm-9"><input type="text" class="form-control" name="loan_amount" value="10000000"></div>
+                  <div class="col-sm-9"><input type="text" class="form-control" name="loan_amount" value="2.0000"></div>
                 </div>
 
                 <div class="form-group">
-                  <label class="control-label col-sm-3" for="repay">이자 계산 : </label> 
+                  <label class="control-label col-sm-3" for="repay">利息计算 : </label> 
                   <div class="col-sm-9">
+
+                    <div class="col-sm-12">
+                      <div class="col-sm-4">逾期是否 ：</div>
+                      <div class="col-sm-8"> <label fclass="check-inline"><input type="radio" name="bill_kind" value="RMB"> YES </label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label fclass="check-inline"><input type="radio" name="bill_kind" value="RMB"> NO </label>
+                      </div>
+                    </div> 
+                    <div class="col-sm-12">
+                      <div class="col-sm-4">挪用是否 ：</div>
+                      <div class="col-sm-8"> <label fclass="check-inline"><input type="radio" name="bill_kind" value="RMB"> YES </label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label fclass="check-inline"><input type="radio" name="bill_kind" value="RMB"> NO </label>
+                      </div>
+                    </div> 
+
                     <div class="col-sm-12">
                       <div class="col-sm-4">변동이자율 ： <input type="text" name="repay_date" value="3.5000">%</div>
                       <div class="col-sm-8">적용일자 : 시작일 <input type="date" name="repay_date" value="2016-09-10">
                                                     종료일 <input type="date" name="repay_date" value="2016-09-15">
                       </div>
                     </div> 
+
                     <div class="col-sm-12">
                       <div class="col-sm-4">변동이자율 ： <input type="text" name="repay_date" value="3.7000">%</div>
                       <div class="col-sm-8">적용일자 : 시작일 <input type="date" name="repay_date" value="2016-09-16">
