--- a/templates/interest/create.html
+++ b/templates/interest/create.html
@@ -67,8 +67,8 @@
 
                     <div class="col-sm-12">
                       <div class="col-sm-4">변동이자율 ： <input type="text" name="repay_date" value="3.5000">%</div>
-                      <div class="col-sm-8">적용일자 : 시작일 <input type="date" name="repay_date" value="2016-09-10">
-                                                    종료일 <input type="date" name="repay_date" value="2016-09-15">
+                      <div class="col-sm-8">적용일자 : 开始日 <input type="date" name="repay_date" value="2016-09-10">
+                                                    结束日 <input type="date" name="repay_date" value="2016-09-15">
                       </div>
                     </div> 
 
